# xray-16-old

./: .gitmodules  README.md
src/: .gitignore  CMakeLists.txt  Common.props  engine.sln
src/Common/: CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  Compiler.inl  LevelStructure.hpp  Platform.hpp  PlatformLinux.inl  PlatformWindows.inl  _d3d_extensions.h  d3d9_posix_stubbs.h  object_cloner.h  object_comparer.h  object_destroyer.h  object_interfaces.h  object_loader.h  object_saver.h  object_type_traits.h
src/Layers/: CMakeLists.txt
src/utils/: Shader_xrLC.h
src/xrAICore/: AISpaceBase.cpp  CMakeLists.txt  pch.hpp
src/xrCDB/: CMakeLists.txt  Frustum.cpp  Frustum.h  ISpatial.cpp  ISpatial.h  ISpatial_q_box.cpp  ISpatial_q_frustum.cpp  ISpatial_q_ray.cpp  ISpatial_verify.cpp  Intersect.hpp  OPC_AABB.cpp  OPC_AABBCollider.cpp  OPC_AABBTree.cpp  OPC_Collider.cpp  OPC_Common.cpp  OPC_Container.cpp  OPC_Matrix3x3.cpp  OPC_Matrix4x4.cpp  OPC_Model.cpp  OPC_OBB.cpp  OPC_OBBCollider.cpp  OPC_OptimizedTree.cpp  OPC_Plane.cpp  OPC_PlanesCollider.cpp  OPC_Point.cpp  OPC_Preprocessor.h  OPC_Ray.cpp  OPC_RayCollider.cpp  OPC_SphereCollider.cpp  OPC_TreeBuilders.cpp  OPC_TreeBuilders.h  OPC_TreeCollider.cpp  OPC_TriBoxOverlap.h  OPC_TriTriOverlap.h  OPC_Triangle.cpp  OPC_Types.h  OPC_VolumeCollider.cpp  Opcode.cpp  Opcode.h  StdAfx.cpp  (+14 more)
src/xrCommon/: math_funcs.h  math_funcs_inline.h  misc_math_types.h  predicates.h  xalloc.h  xr_deque.h  xr_hash_map.h  xr_list.h  xr_map.h  xr_set.h  xr_stack.h  xr_string.h  xr_vector.h
src/xrCore/: CMakeLists.txt  ChooseTypes.h  FS.cpp  FS.h  FS_internal.h  FTimer.cpp  FTimer.h  FileSystem.cpp  FileSystem_borland.cpp  FileSystem_posix.cpp  FixedVector.h  LocatorAPI.cpp  LocatorAPI.h  LocatorAPI_auth.cpp  LocatorAPI_defs.cpp  LocatorAPI_defs.h  LzHuf.cpp  ModuleLookup.cpp  NET_utils.cpp  PPMdType.h  Stream_Reader.h  SubAlloc.hpp  Xr_ini.cpp  _bitwise.h  _color.h  _cylinder.h  _fbox.h  _fbox2.h  _flags.h  _math.cpp  _math.h  _matrix.h  _matrix33.h  _obb.h  _plane.h  _plane2.h  _quaternion.h  _random.h  _rect.h  _sphere.cpp  (+63 more)
src/xrEngine/: CMakeLists.txt  CameraDefs.h  CameraManager.h  CustomHUD.h  Device_Initialize.cpp  Device_destroy.cpp  Device_wndproc.cpp  Effector.h  Engine.h  EngineAPI.cpp  EngineAPI.h  Engine_impexp.h  Environment.h  Environment_misc.cpp  EventAPI.cpp  EventAPI.h  FDemoRecord.cpp  Feel_Sound.h  Feel_Touch.cpp  Feel_Touch.h  Feel_Vision.cpp  GameFont.cpp  GameFont.h  GameMtlLib.cpp  GameMtlLib.h  IGameFont.hpp  IGame_Level.h  IGame_ObjectPool.cpp  IGame_Persistent.h  IInputReceiver.cpp  IInputReceiver.h  IPhysicsGeometry.h  IPhysicsShell.h  ISheduled.h  LightAnimLibrary.cpp  ObjectDump.cpp  PS_instance.h  Render.h  StatGraph.h  Stats.h  (+33 more)
src/xrGame/: AI_PhraseDialogManager.cpp  ActivatingCharCollisionDelay.cpp  Actor.cpp  ActorAnimation.cpp  ActorEffector.cpp  BlackGraviArtifact.h  BoneProtections.cpp  BreakableObject.cpp  CMakeLists.txt  CameraEffector.h  CameraFirstEye.cpp  CameraLook.h  Car.cpp  CarSound.cpp  CharacterPhysicsSupport.cpp  ClimableObject.cpp  CustomDetector.h  DBG_Car.cpp  DemoInfo.cpp  Entity.cpp  Entity.h  EntityCondition.cpp  EntityCondition.h  Explosive.cpp  Explosive.h  GameObject.cpp  GameObject.h  GamePersistent.cpp  GametaskManager.cpp  GlobalFeelTouch.hpp  HUDManager.cpp  HUDManager.h  HUDTarget.cpp  HangingLamp.cpp  Helicopter.cpp  HelicopterMovementManager.cpp  HelicopterWeapon.cpp  Hit.cpp  Hit.h  HitMarker.h  (+275 more)
src/xrGameSpy/: CMakeLists.txt  GameSpy_Browser.h  GameSpy_GCD_Client.cpp
src/xrMisc/: CMakeLists.txt  Sound.cpp  WaveForm.cpp  color.cpp  gametype_chooser.cpp  stdafx.h  string_functions.cpp  xrMisc.vcxproj  xrMisc.vcxproj.filters  xrMisc_xrMemory.cpp
src/xrNetServer/: CMakeLists.txt  NET_AuthCheck.h  NET_Client.cpp  NET_Client.h  NET_Common.cpp  NET_Common.h  NET_Compressor.cpp  NET_Compressor.h  NET_Log.cpp  NET_Log.h  NET_PlayersMonitor.h  NET_Server.cpp  NET_Server.h  NET_Shared.h  stdafx.h
src/xrParticles/: CMakeLists.txt  particle_core.cpp  psystem.h  stdafx.h
src/xrPhysics/: ActorCameraCollision.cpp  BlockAllocator.h  CMakeLists.txt  CalculateTriangle.h  CycleConstStorage.h  DamageSource.h  DisablingParams.h  ElevatorState.cpp  ElevatorState.h  ExtendedGeom.cpp  ExtendedGeom.h  Geometry.h  GeometryBits.cpp  IActivationShape.cpp  IColisiondamageInfo.h  IElevatorState.h  IPHCapture.h  IPHStaticGeomShell.h  IPHWorld.h  MathUtils.cpp  MathUtils.h  MathUtilsOde.h  MovementBoxDynamicActivate.cpp  PHAICharacter.cpp  PHAICharacter.h  PHActivationShape.cpp  PHActivationShape.h  PHActorCharacter.cpp  PHActorCharacter.h  PHBaseBodyEffector.h  PHCapture.cpp  PHCapture.h  PHCaptureInit.cpp  PHCharacter.cpp  PHCharacter.h  PHCollideValidator.cpp  PHCollideValidator.h  PHContactBodyEffector.cpp  PHContactBodyEffector.h  PHDefs.h  (+59 more)
src/xrScriptEngine/: CMakeLists.txt  DebugMacros.hpp  Functor.hpp  ScriptExportMacros.hpp  ScriptExporter.hpp  pch.hpp  script_debugger.cpp  script_engine.hpp  script_lua_helper.cpp  script_space_forward.hpp
src/xrServerEntities/: PHNetState.cpp  PHNetState.h  PHSynchronize.h  PropertiesListTypes.h  ShapeData.h  WaveForm.h  ai_sounds.h  alife_monster_brain.cpp  alife_space.cpp  alife_space.h  character_info_defs.h  clsid_game.h  game_base_space.h  gametype_chooser.cpp  gametype_chooser.h  inventory_space.h  object_factory_inline.h  object_item_abstract.h  restriction_space.h  script_fvector_script.cpp  script_ini_file_script.cpp  script_token_list.cpp  script_token_list.h  shared_data.h  smart_cast.h  xrEProps.h  xrMessages.h  xrServer_Object_Base.cpp  xrServer_Object_Base.h  xrServer_Objects.cpp  xrServer_Objects.h  xrServer_Objects_ALife.cpp  xrServer_Objects_ALife.h  xrServer_Objects_ALife_Items.cpp  xrServer_Objects_ALife_Items.h  xrServer_Objects_ALife_Monsters.cpp  xrServer_Objects_ALife_Monsters.h  xrServer_Objects_Abstract.cpp  xrServer_Objects_Alife_Smartcovers.cpp  xrServer_Objects_Alife_Smartcovers.h  (+2 more)
src/xrSound/: CMakeLists.txt  OpenALDeviceList.cpp  OpenALDeviceList.h  Sound.h  SoundRender.h  SoundRender_Cache.cpp  SoundRender_Core.cpp  stdafx.h  (+19 more)
(+497 files in other folders)
