set(SOURCES
  CameraBase.cpp
  CameraManager.cpp
  cf_dynamic_mesh.cpp
  CustomHUD.cpp
  defines.cpp
  device.cpp
  Device_create.cpp
  Device_destroy.cpp
  Device_Initialize.cpp
  Device_Misc.cpp
  Device_overdraw.cpp
  Device_wndproc.cpp
  editor_environment_ambients_ambient.cpp
  editor_environment_ambients_effect_id.cpp
  editor_environment_ambients_manager.cpp
  editor_environment_ambients_sound_id.cpp
  editor_environment_detail.cpp
  editor_environment_effects_effect.cpp
  editor_environment_effects_manager.cpp
  editor_environment_levels_manager.cpp
  editor_environment_manager.cpp
  editor_environment_manager_properties.cpp
  editor_environment_sound_channels_channel.cpp
  editor_environment_sound_channels_manager.cpp
  editor_environment_sound_channels_source.cpp
  editor_environment_suns_blend.cpp
  editor_environment_suns_flare.cpp
  editor_environment_suns_flares.cpp
  editor_environment_suns_gradient.cpp
  editor_environment_suns_manager.cpp
  editor_environment_suns_sun.cpp
  editor_environment_thunderbolts_collection.cpp
  editor_environment_thunderbolts_gradient.cpp
  editor_environment_thunderbolts_manager.cpp
  editor_environment_thunderbolts_thunderbolt.cpp
  editor_environment_thunderbolts_thunderbolt_id.cpp
  editor_environment_weathers_manager.cpp
  editor_environment_weathers_time.cpp
  editor_environment_weathers_weather.cpp
  edit_actions.cpp
  Effector.cpp
  EffectorPP.cpp
  Engine.cpp
  EngineAPI.cpp
  engine_impl.cpp
  Environment.cpp
  Environment_misc.cpp
  Environment_render.cpp
  EventAPI.cpp
  FDemoPlay.cpp
  FDemoRecord.cpp
  Feel_Touch.cpp
  Feel_Vision.cpp
  GameFont.cpp
  GameMtlLib.cpp
  GameMtlLib_Engine.cpp
  ICollidable.cpp
  IGame_Level.cpp
  IGame_Level_check_textures.cpp
  IGame_ObjectPool.cpp
  IGame_Persistent.cpp
  IInputReceiver.cpp
  IRenderable.cpp
  ISheduled.cpp
  LightAnimLibrary.cpp
  line_editor.cpp
  line_edit_control.cpp
  mailSlot.cpp
  ObjectAnimator.cpp
  ObjectDump.cpp
  PerformanceAlert.cpp
  perlin.cpp
  phdebug.cpp
  profiler.cpp
  PS_instance.cpp
  pure.cpp
  pure_relcase.cpp
  Rain.cpp
  Render.cpp
  StatGraph.cpp
  Stats.cpp
  stdafx.cpp
  #Text_Console.cpp # TODO: Port to POSIX
  #Text_Console_WndProc.cpp # TODO: Port to POSIX
  thunderbolt.cpp
  #tntQAVI.cpp
  xrHemisphere.cpp
  xrImage_Resampler.cpp
  xrSASH.cpp
  xrSheduler.cpp
  xrTheora_Stream.cpp
  xrTheora_Surface.cpp
  #xrTheora_Surface_mmx.cpp
  xr_collide_form.cpp
  xr_efflensflare.cpp
  Xr_input.cpp
  xr_input_xinput.cpp
  XR_IOConsole.cpp
  XR_IOConsole_callback.cpp
  XR_IOConsole_control.cpp
  XR_IOConsole_get.cpp
  xr_ioc_cmd.cpp
  xr_object.cpp
  xr_object_list.cpp
  x_ray.cpp
  main.cpp
)

set(HEADERS
  CameraBase.h
  CameraDefs.h
  CameraManager.h
  cf_dynamic_mesh.h
  CustomHUD.h
  defines.h
  device.h
  editor_environment_ambients_ambient.hpp
  editor_environment_ambients_effect_id.hpp
  editor_environment_ambients_manager.hpp
  editor_environment_ambients_sound_id.hpp
  editor_environment_detail.hpp
  editor_environment_effects_effect.hpp
  editor_environment_effects_manager.hpp
  editor_environment_levels_manager.hpp
  editor_environment_manager.hpp
  editor_environment_sound_channels_channel.hpp
  editor_environment_sound_channels_manager.hpp
  editor_environment_sound_channels_source.hpp
  editor_environment_suns_blend.hpp
  editor_environment_suns_flare.hpp
  editor_environment_suns_flares.hpp
  editor_environment_suns_gradient.hpp
  editor_environment_suns_manager.hpp
  editor_environment_suns_sun.hpp
  editor_environment_thunderbolts_collection.hpp
  editor_environment_thunderbolts_gradient.hpp
  editor_environment_thunderbolts_manager.hpp
  editor_environment_thunderbolts_thunderbolt.hpp
  editor_environment_thunderbolts_thunderbolt_id.hpp
  editor_environment_weathers_manager.hpp
  editor_environment_weathers_time.hpp
  editor_environment_weathers_weather.hpp
  edit_actions.h
  Effector.h
  EffectorPP.h
  Engine.h
  EngineAPI.h
  Engine_impexp.h
  engine_impl.hpp
  EnnumerateVertices.h
  Environment.h
  EventAPI.h
  FDemoPlay.h
  FDemoRecord.h
  Feel_Sound.h
  Feel_Touch.h
  Feel_Vision.h
  GameFont.h
  GameMtlLib.h
  ICollidable.h
  ide.hpp
  IGameFont.hpp
  IGame_Level.h
  IGame_ObjectPool.h
  IGame_Persistent.h
  IInputReceiver.h
  IObjectPhysicsCollision.h
  IPerformanceAlert.hpp
  IPHdebug.h
  IPhysicsGeometry.h
  IPhysicsShell.h
  IRenderable.h
  ISheduled.h
  LightAnimLibrary.h
  line_editor.h
  line_edit_control.h
  mp_logging.h
  ObjectAnimator.h
  ObjectDump.h
  PerformanceAlert.hpp
  perlin.h
  profiler.h
  profiler_inline.h
  Properties.h
  property_collection.hpp
  property_collection_forward.hpp
  property_collection_inline.hpp
  psystem.h
  PS_instance.h
  pure.h
  pure_relcase.h
  Rain.h
  Render.h
  resource.h
  StatGraph.h
  Stats.h
  stdafx.h
  std_classes.h
  Text_Console.h
  thunderbolt.h
  tntQAVI.h
  vis_common.h
  WaveForm.h
  xrHemisphere.h
  xrImage_Resampler.h
  xrSASH.h
  xrSheduler.h
  xrTheora_Stream.h
  xrTheora_Surface.h
  #xrTheora_Surface_mmx.h
  xr_collide_form.h
  xr_efflensflare.h
  xr_input.h
  xr_input_xinput.h
  XR_IOConsole.h
  xr_ioc_cmd.h
  xr_object.h
  xr_object_list.h
  x_ray.h
)

include_directories("." ${CMAKE_SOURCE_DIR} ${SDL_INCLUDE_DIR} ${LUA_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/../Externals/luabind ${OGG_INCLUDE_DIR} ${THEORA_INCLUDE_DIRS})

add_executable(xrEngine ${SOURCES} ${HEADERS})

target_link_libraries(xrEngine ${CMAKE_SOURCE_DIR}/build/Layers/xrAPI/libxrAPI.a ${CMAKE_SOURCE_DIR}/build/xrCore/xrCore.so ${CMAKE_SOURCE_DIR}/build/Layers/xrRenderPC_GL/xrRender_GL.so ${SDL2_LIBRARY} ${OGG_LIBRARIES} ${THEORA_LIBRARIES} ${LUA_LIBRARIES} ${CMAKE_SOURCE_DIR}/build/Externals/luabind/src/luabind.so) #${CMAKE_SOURCE_DIR}/build/Externals/luajit/luajit.so)
